<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">graVITas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Drawer">Drawer</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="terms_conditions">Terms and Conditions</string>

    <color name="white">#ffffff</color>

    <string name="title_activity_event">EventActivity</string>
    <string name="building">Building</string>
    <string name="eventLogo">Event Logo</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="rules">Event Rules</string>
    <string name="calIcon">Calender Icon</string>
    <string name="clockIcon">Clock Icon</string>
    <string name="locIcon">Location Icon</string>
    <string name="info">INFO</string>
    <string name="cash_prize">CASH PRIZE</string>
    <string name="eventTitle">Event Title Goes Here</string>
    <string name="by">By Student Chapter</string>
    <string name="eventDate">27th September 2013</string>
    <string name="eventTime">5:00 PM</string>
    <string name="eventVenue">Room 413, Technology Tower</string>
    <string name="noNetwork">No Network Connection</string>
    <string name="title_activity_splash_screen">GraVITas 2013</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_content">This app does not collect, use or process any of your private information. This application uses internet for the sole purpose of manipulating the ads that are displayed in the app.\n\nThe information sent from your device to the internet is just the request for the location and its data that you choose to add in the app.\n\nNo private data whatsoever is collected in the app and send to the Internet.\n\nAll rights reserved.\n\nSupport - support.app@outlook.com</string>
    <string name="action_admin">Admin Panel</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_admin">AdminActivity</string>

    <color name="trans_grey">#806f98cb</color>

    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin_panel">Admin Panel</string>

    <!-- GCM -->
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="submit">Submit</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="max_100">Max 100 characters</string>
    <string name="title_activity_feed">FeedActivity</string>

    <color name="yello">#f0b130</color>

</resources>