<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spash"
        android:background="#7a7a7a" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/spash"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="#d8d8d8"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/titleImage" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical" >

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/calIcon"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/cal_locs" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/eventDate"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/clockIcon"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/clock_locs" />

                <TextView
                    android:id="@+id/mEventTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.98"
                    android:text="@string/eventTime"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:includeFontPadding="false"
                    android:text="@string/rules"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/locIcon"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/pin_locs" />

                <TextView
                    android:id="@+id/mEventVenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/eventVenue"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="2dp" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/info"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/separator1"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_gravity="center_vertical"
                    android:background="#7a7a7a" />
            </LinearLayout>

            <TextView
                android:id="@+id/mEventInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textColor="#888888"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/cashLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingLeft="2dp"
                    android:text="@string/cash_prize"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/separator2"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_gravity="center_vertical"
                    android:background="#7a7a7a" />
            </LinearLayout>

            <TextView
                android:id="@+id/mEventCashPrize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#888888"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

   <com.android.volley.toolbox.NetworkImageView
       android:id="@+id/titleImage"
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:layout_alignTop="@+id/view2"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="-28dp"
       android:background="#d8d8d8"
       android:padding="2dp"
       android:src="@drawable/bulb72" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spash"
        android:padding="3dp"
        android:text=""
        android:textSize="12sp" />

</RelativeLayout>